
[package]
name = "tunl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.28", features = ["io-util", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
futures-util = "0.3.28"
pin-project-lite = "0.2"
uuid = "1.8.0"
bytes = "1.0"
aes-gcm = "0.10"
aes = "0.8.0"
sha2 = "0.10.6"
md-5 = "0.10.6"
anyhow = "1.0.86"
reqwest = "0.12.5"
